# SCPlan

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  HOWTO  TODO  TODO.md  aius3011.scn  build.sh  build_install_osqp.sh  clean.sh  importDir.cmake  main.cpp  ros2support.cmake  temp  uvEmbH7 Debug.launch  uvEmbH7.ioc  uvEmbH7Test.tab.json
Apps/: app_arm.c  app_arm.h  app_bat_monitor.c  app_bat_monitor.h  app_communicate.c  app_communicate.h  app_ctrl.c  app_ctrl.h  app_imuFX.c  app_imuFX.h  app_ui.c  app_ui.h  apps.c  apps.h
Components/Button/: driver_button.c  driver_button.h  driver_button_port.c  driver_button_port.h  flexible_button.c
Components/Buzzer/: driver_buzzer.c  driver_buzzer.h  sound.h
Test/: carryTask.json  config.json  task.json  test.cpp  test.hpp
src/scp_control/: CMakeLists.txt  package.xml
src/scp_control/config/: control_parameter.yaml
src/scp_control/src/: scp_control_main.cpp
src/scp_plan/: CMakeLists.txt  package.xml
src/scp_plan/Components/Coordinate/: Coordinate.cpp  Coordinate.hpp
src/scp_plan/Components/Shape/: Line.hpp  Shape.hpp
src/scp_plan/Node/: scp_plan_main.cpp  scp_plan_node.cpp  scp_plan_node.hpp
src/scp_plan/Plan/Arithmetic/: CarryPlanner.cpp  CarryPlanner.hpp  Common.cpp  HybridAStar.cpp  SCPlanner.cpp  SCPlanner.hpp
src/scp_plan/Plan/Map/: DistanceElementMap.cpp  ElementMap.cpp  Map.hpp
src/scp_plan/include/scp_carry_plan/: carry_plan.hpp  scp_carry_plan_node.hpp
src/scp_plan/include/scp_hybridastar_plan/: astar.hpp  element.hpp  grid_map.hpp  hybrid_astar.hpp  scp_hybridastar_plan_node.hpp  type.hpp
src/scp_plan/include/scp_plan/: connect_graph.hpp  graph.hpp  graph_typedef.hpp  pix_map.hpp  scp_plan.hpp  scp_plan_node.hpp
src/scp_plan/scripts/: showPolygen.py
src/scp_plan/src/scp_carry_plan/: carry_plan.cpp  scp_carry_plan_main.cpp  scp_carry_plan_node.cpp
src/scp_plan/src/scp_hybridastar_plan/: astar.cpp  element.cpp  grid_map.cpp  hybrid_astar.cpp  scp_hybridastar_plan_main.cpp  scp_hybridastar_plan_node.cpp
src/scp_plan/src/scp_plan/: connect_graph.cpp  pix_map.cpp  scp_plan.cpp  scp_plan_main.cpp  scp_plan_node.cpp
src/scp_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  plugins_description.xml
src/scp_rviz_plugin/Components/Shape/: Polygon.cpp
src/scp_rviz_plugin/Plan/Arithmetic/: CarryPlanner.hpp  Common.hpp
src/scp_rviz_plugin/Plan/Map/: Map.cpp
src/scp_rviz_plugin/Plan/Visualize/: Visualize.cpp  Visualize.hpp
src/scp_rviz_plugin/include/scp_rviz_plugin/: NSCPCarryGoal.hpp  NSCPMoveGoal.hpp  SCPMoveGoal.hpp  _pose_tool2.hpp  scp_rviz_elementmap copy.hpp  scp_rviz_elementmap.hpp  scp_rviz_moveto.hpp
src/scp_rviz_plugin/src/: NSCPCarryGoal.cpp  NSCPMoveGoal.cpp  SCPMoveGoal.cpp  _pose_tool2.cpp  scp_rviz_elementmap copy.cpp  scp_rviz_elementmap.cpp  scp_rviz_moveto.cpp
src/scp_simulate/: CMakeLists.txt  package.xml
src/scp_simulate/include/scp_simulate/: gazebo_ros_addjoint.hpp  gazebo_ros_agentaction.hpp  gazebo_ros_modelstate.hpp
src/scp_simulate/launch/: scp_carry_plan.launch.py  scp_hybridastar_plan.launch.py  scp_plan.launch.py  scp_plan_ll.launch.py  scp_world_only.launch.py
src/scp_simulate/materials/: agent.material
src/scp_simulate/models/: agent.json  good.json  obstacle.json  wall10.json  wall12.json
src/scp_simulate/rviz/: default.rviz
src/scp_simulate/src/: gazebo_ros_addjoint.cpp  gazebo_ros_agentaction.cpp  gazebo_ros_modelstate.cpp  scp_simulate_manual_node.cpp
src/scp_simulate/worlds/: agent.xacro  good.xacro  ground_plane.xacro  light.xacro  obstacle.xacro  wall.xacro  world copy.world  world.world  world.world.xacro  world2.world  world2.world.xacro
src/scp_simulate/worlds/agent/: model.config  model.sdf
src/scp_simulate/worlds/good/: model.config  model.sdf
src/scp_simulate/worlds/macros/: inertia.xacro  math.xacro
src/scp_simulate/worlds/obstacle/: model.sdf
src/scp_simulate/worlds/wall10/: model.config  model.sdf
src/scp_simulate/worlds/wall12/: model.config  model.sdf
src/uve_mapclient/: CMakeLists.txt  package.xml
src/uve_mapclient/include/uve_mapclient/: uve_mapclient.hpp
src/uve_mapclient/src/: uve_mapclient.cpp  uve_mapclient_main.cpp  uve_simoptitrack_node.cpp
src/uve_perception/: CMakeLists.txt  package.xml
src/uve_perception/config/: perception_config.yaml
src/uve_perception/include/uve_perception/: uve_perception.hpp
src/uve_perception/launch/: uve_perception.launch.py
src/uve_perception/src/: uve_perception.cpp  uve_perception_main.cpp
src/uve_plan/: CMakeLists.txt  HOWTO  package.xml
src/uve_plan/config/: gen_parameter.yaml  layer1_test.yaml  layer2_test.yaml  layer3_test.yaml
src/uve_plan/include/uve_plan/astar/: astar.hpp
src/uve_plan/include/uve_plan/hybrid_astar/: hybrid_astar.hpp
src/uve_plan/include/uve_plan/layer1/: layer1_define.hpp  layer1_node.hpp  layer1_plan.hpp
src/uve_plan/include/uve_plan/layer2/: layer2_define.hpp  layer2_node.hpp  layer2_plan.hpp
src/uve_plan/include/uve_plan/layer3/: layer3_define.hpp  layer3_node.hpp  layer3_plan.hpp
src/uve_plan/launch/: uve_plan_genmap.launch.py  uve_plan_layer1_test.launch.py  uve_plan_layer2_test.launch.py  uve_plan_layer3_test.launch.py
src/uve_plan/src/: astar_test.cpp  generate_map_main.cpp  hybrid_astar_test.cpp  layer1_node_main.cpp  layer2_node_main.cpp  layer3_node_main.cpp  uve_plan_main.cpp
src/uve_plan/src/layer1/: layer1_define.cpp  layer1_node.cpp  layer1_node_main.cpp  layer1_plan.cpp
src/uve_plan/src/layer2/: layer2_node.cpp  layer2_plan.cpp
src/uve_plan/src/layer3/: layer3_define.cpp  layer3_node.cpp  layer3_plan.cpp
src/uve_rviz_plugin/: CMakeLists.txt  package.xml  plugins_description.xml
src/uve_rviz_plugin/include/uve_rviz_plugin/: InteractiveMove.hpp  NonInteractiveCarry.hpp  NonInteractiveMove.hpp  PoseToolBase.hpp
src/uve_rviz_plugin/src/: InteractiveMove.cpp  NonInteractiveCarry.cpp  NonInteractiveMove.cpp  PoseToolBase.cpp
urosTest/: .cproject  .mxproject  .project  urosTest.ioc
uvEmbMaster/: CMakeLists.txt  testmain.cpp  uvEmbMaster.cpp  uvEmbMaster.h
(+126 files in other folders)
